<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayoutSelectImageDialog"
        android:padding="24dp"
        android:layout_gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_select_image_title"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:textAlignment="center"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

        <Button
                android:id="@+id/buttonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/dialog_icon_camera"
                android:text="@string/button_camera"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:id="@+id/buttonGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/dialog_icon_image"
                android:text="@string/button_gallery"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_marginTop="8dp"/>
    </LinearLayout>

</LinearLayout>