<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorOnSurfaceInverse"
            android:paddingEnd="16dp"
            android:paddingStart="6dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_baseline_close_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accomplishmentTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/accomplishment_title_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAccomplishmentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text|textCapSentences"
                android:labelFor="@id/editTextAccomplishmentTitle"
                android:maxLines="1"
                android:maxLength="100">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accomplishmentDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/accomplishment_description_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAccomplishmentDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:labelFor="@id/editTextAccomplishmentDescription"
                android:maxLength="200"
                android:maxLines="10">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/accomplishmentDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/accomplishment_date_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAccomplishmentDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textMultiLine|textCapSentences"
                    android:labelFor="@id/editTextAccomplishmentDate">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--<CheckBox
            android:id="@+id/accomplishmentTimeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/accomplishment_time_toggle" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accomplishmentTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/accomplishment_time_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAccomplishmentTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine|textCapSentences"
                android:labelFor="@id/editTextAccomplishmentTime">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/buttonDelete"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_delete"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/buttonConfirm"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>